--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ h4 {
     color: #757575;
 }
 
+#stats_div {
+    display: -webkit-inline-box;
+}
+
 #header_div {
     height: 128px;
     padding: 24px;
