--- a/css/loaderbar.css
+++ b/css/loaderbar.css
@@ -66,7 +66,7 @@
 }
 
 #loader {
-    background-color: #4CAF50;
+    background-color: #895352;
     margin: 0;
 }
 
@@ -86,9 +86,9 @@
 }
 
 .progress {
-  -webkit-animation: loader 25s ease infinite;
-          animation: loader 25s ease infinite;
-  background-color: #4CAF50;
+  -webkit-animation: loader 28s ease infinite;
+          animation: loader 28s ease infinite;
+  background-color: #ffd56b;
   color: #fff;
   padding: 5px;
   width: 0;
